--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Product preview card component</title>
 
@@ -14,7 +14,7 @@
 <body class="flexbox-centralize">
 
   <div class="product-card">
-    <img class="product-img" src="./images/image-product-mobile.jpg">
+    <img class="product-img" src="./assets/images/image-product-mobile.jpg">
 
     <div class="product-body flexbox">
       <div class="product-description flexbox">
@@ -38,7 +38,7 @@
       </div>
 
       <div class="add-to-cart-button flexbox-centralize">
-        <img src="./images/icon-cart.svg">
+        <img src="./assets/images/icon-cart.svg">
         <p>Add to Cart</p>
       </div>
 
