--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/index.css">
 
 </head>
-<body class="flexbox-centralize">
+<body class="flexbox flex-centralize">
 
   <div class="product-card">
     <img class="product-img" src="./assets/images/image-product-mobile.jpg">
@@ -37,7 +37,7 @@
 
       </div>
 
-      <div class="add-to-cart-button flexbox-centralize">
+      <div class="add-to-cart-button flexbox flex-centralize">
         <img src="./assets/images/icon-cart.svg">
         <p>Add to Cart</p>
       </div>
